Footer, Fixed Main Page Search, Removed search visibility for non logged in individuals.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -11,3 +11,9 @@
 
 .form-control.is-invalid {background-image: none !important;}
 .form-control.is-valid {background-image: none !important;}
+
+.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open>.dropdown-toggle.btn-primary {
+    color: #fff !important;
+    background-color: #00b3db !important;
+    border-color: #285e8e !important; /*set the color you want here*/
+}
